--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="images/alok_photo.png" alt="Alok Profile Photo"></td>
+        <td><img src="alok_photo.png" alt="Alok Profile Photo"></td>
         <td  <h1>Alok Tiwari</h1>
           <p><em>Project Engineer at <strong><a href="https://www.wipro.com/">Wipro</a></strong></em></p>
           <p>I am a Software Developer</p></td>
